--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
             document.getElementById("num").innerHTML=num;  
             if (num < 0) {  
             document.getElementById("num").innerHTML = 0;  
-                location.href = "https:holzora.top/";  
+                location.href = "index.html";  
             }  
        }  
        setInterval("redirect()", 1000);  
@@ -41,17 +41,16 @@
             }
     </style>
     <body>  
-        <br><br><br><br>
-                 <div class="am-g">  
-                    <div class="am-u-sm-12">  
+        <br><br><br>
                         <h2 class="am-text-center am-text-xxxl am-margin-top-lg">404. Not Found</h2>  
                         <p class="am-text-center">  
                             没有找到你要的页面  
                         </p>  
                         <p class="am-text-center">  
-                            <span id="num">5</span>秒后自动跳转到首页<a href="https:holzora.top/">马上跳转</a>  
+                            <span id="num">5</span>秒后自动跳转到首页<a href="index.html">马上跳转</a>  
                         </p>  
-        <pre class="page-404">          
+        <div style="text-align: center;">
+        <pre>       
                   .----.  
                _.'__    `.  
            .--($)($$)---/#\  
@@ -65,9 +64,8 @@
             `-._______.-'  
             ___`. | .'___  
            (______|______)  
-        </pre>  
-                    </div>  
-                </div>  
-            </div>  
+        </pre>
+        </div>
+
     </body>  
 </html>
