--- a/404.html
+++ b/404.html
@@ -42,14 +42,14 @@
     </style>
     <body>  
         <br><br><br>
-                        <h2 class="am-text-center am-text-xxxl am-margin-top-lg">404. Not Found</h2>  
-                        <p class="am-text-center">  
+                        <h2>404. Not Found</h2>  
+                        <p>  
                             没有找到你要的页面  
                         </p>  
-                        <p class="am-text-center">  
+                        <p>  
                             <span id="num">5</span>秒后自动跳转到首页<a href="index.html">马上跳转</a>  
                         </p>  
-        <div style="text-align: center;">
+        
         <pre>       
                   .----.  
                _.'__    `.  
@@ -66,6 +66,6 @@
            (______|______)  
         </pre>
         </div>
-
+        
     </body>  
 </html>
