--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
             document.getElementById("num").innerHTML=num;  
             if (num < 0) {  
             document.getElementById("num").innerHTML = 0;  
-                location.href = "index.html";  
+                location.href = "/";  
             }  
        }  
        setInterval("redirect()", 1000);  
@@ -47,7 +47,7 @@
                             没有找到你要的页面  
                         </p>  
                         <p>  
-                            <span id="num">5</span>秒后自动跳转到首页<a href="index.html">马上跳转</a>  
+                            <span id="num">5</span>秒后自动跳转到首页<a href="/">马上跳转</a>  
                         </p>  
         
         <pre>       
