--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+        <meta name="robots" content="noarchive">
         <title>网页不存在</title>
     <!-- 
     欢迎光临个人导航网站！
@@ -65,7 +66,6 @@
             ___`. | .'___  
            (______|______)  
         </pre>
-        </div>
         
     </body>  
 </html>
