--- a/html/catalog.html
+++ b/html/catalog.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>星空小栈</title>
-    <link rel='icon' href='https://holzora.top/image/favicon.ico' type='image/x-ico'>
+    <link rel='icon' href='https://i.holzora.top/image/favicon.ico' type='image/x-ico'>
     <script>
         var _hmt = _hmt || [];
         (function() {
@@ -46,7 +46,7 @@
      }
 </script>
 <body>
-    <h1><a href="https://holzora.top/" style="color:black;text-decoration:none;">星空小栈</a></h1>
+    <h1><a href="https://i.holzora.top/" style="color:black;text-decoration:none;">星空小栈</a></h1>
     <h2><a href="javascript:catalog()" title="点击随机播放下列歌曲">歌曲目录</a></h2>
     <h3><a href="index.html" target="_blank">Patema inverse</a></h3>
     <h3><a href="d/" target="_blank">Ein kleines lied</a></h3>
