--- a/html/d/index.html
+++ b/html/d/index.html
@@ -9,7 +9,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <title>Ein kleines lied</title>
-  <link rel='icon' href='https://holzora.top/image/favicon.ico' type='image/x-ico'>
+  <link rel='icon' href='https://i.holzora.top/image/favicon.ico' type='image/x-ico'>
   <script>
 	var _hmt = _hmt || [];
 	(function() {
@@ -117,7 +117,7 @@
     lyric translation:internet
     -->
     <audio id="myAudio" autoplay loop="loop"val="open">
-    <source src="https://holzora.top/audio/d.mp3"type=audio/mp3>
+    <source src="https://i.holzora.top/audio/d.mp3"type=audio/mp3>
 	</audio>
 </body>
 </html>
