--- a/html/d/l/index.html
+++ b/html/d/l/index.html
@@ -9,7 +9,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <title>You are beautiful</title>
-  <link rel='icon' href='https://holzora.top/image/favicon.ico' type='image/x-ico'>
+  <link rel='icon' href='https://i.holzora.top/image/favicon.ico' type='image/x-ico'>
   <script>
 	var _hmt = _hmt || [];
 	(function() {
@@ -79,7 +79,7 @@
     source of song/lyric:internet
     -->
     <audio id="myAudio" autoplay loop="loop"val="open">
-    <source src="https://holzora.top/audio/l.mp3"type=audio/mp3>
+    <source src="https://i.holzora.top/audio/l.mp3"type=audio/mp3>
 	</audio>
 </body>
 </html>
