--- a/html/d/l/n/i/index.html
+++ b/html/d/l/n/i/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>Be with you</title>
-    <link rel='icon' href='https://holzora.top/image/favicon.ico' type='image/x-ico'>
+    <link rel='icon' href='https://i.holzora.top/image/favicon.ico' type='image/x-ico'>
     <script>
         var _hmt = _hmt || [];
         (function() {
@@ -96,7 +96,7 @@
     lyric translation:internet
     -->
     <audio id="myAudio" autoplay loop="loop"val="open">
-    <source src="https://holzora.top/audio/i.mp3"type=audio/mp3>
+    <source src="https://i.holzora.top/audio/i.mp3"type=audio/mp3>
     </audio>
 </body>
 </html>
