--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@ script{display: none !important;}
 .wrapper{
     text-align: center;
     }
+ul{
+    display: none;
+    width: 250px;
+    border: 1px solid #ccc;
+    border-radius: 1px;
+    margin: 0 auto;
+    }
+li{
+    text-align: left;
+    margin-left: 1px;
+    margin-top: 3px;
+    }
 </style>
 <script type="text/javascript">  
     function disptime(){  
@@ -78,14 +90,14 @@ script{display: none !important;}
 </script>  
 <body onload="disptime()">
     <br><br><br><br>
-    <h1><a href="https://holzora.top/" style="color:black;text-decoration:none;">星空小栈</a></h1>
+    <h1><a href="https://i.holzora.top/" style="color:black;text-decoration:none;">星空小栈</a></h1>
     <br>
     <span><a href="html/catalog.html" id="a2">音乐</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="http://m.sizhicn.com/bookcase.php" target="_blank" id="a2">小说</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://ddrk.me/" target="_blank" id="a2">电影</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://www.pixiv.net/"target="_blank" id="a2">插画</a></span>
     <div class="wrapper">
     <form  action="https://baidu.com/s" target="_blank" method="get">
-        <input type="text" baidusug="1" name="wd" id="search" placeholder="请输入关键词搜索">
+        <input type="text" name="wd" id="search" placeholder="请输入关键词搜索">
     </form>
-    <script charset="gbk" src="http://www.baidu.com/js/opensug.js"></script>
+    <ul></ul>
     </div>
     <br>
     <span><a href="https://bbs.nga.cn/" target="_blank" id="a2">nga</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://keylol.com/" target="_blank" id="a2">keylol</a></span>
@@ -115,6 +127,35 @@ script{display: none !important;}
         Y=new Date();T=(Y.getTime()-X.getTime());M=24*60*60*1000;
         a=T/M;A=Math.floor(a);b=(a-A)*24;B=Math.floor(b);c=(b-B)*60;C=Math.floor((b-B)*60);D=Math.floor((c-C)*60);
         runtime_span.innerHTML="本站已运行: "+A+"天"+B+"小时"+C+"分"+D+"秒"}show_runtime();
+    </script>
+    <script>
+        function ds(data) {
+            console.log(data)
+        }
+        var oInput = document.getElementsByTagName("input")[0];
+        
+        oInput.oninput = function () {
+            var value = this.value;
+            var oScript = document.createElement("script");
+            oScript.src = "https://sp0.baidu.com/5a1Fazu8AA54nxGko9WTAnF6hhy/su?wd="+ value +"&cb=doJson&_=1544270132010";
+            document.body.appendChild(oScript);
+            document.body.removeChild(oScript);
+        };
+        
+        function doJson(data) {
+            var s = data.s;
+            $("ul").empty();
+            if(s.length > 0){
+                s.forEach(function (ele,index) {
+                var a = $("<a></a>").attr("href","https://www.baidu.com/s?wd=" + ele);
+                a.text(ele);
+                $("<li></li>").append(a).appendTo($("ul"));
+                });
+                $("ul").css("display","block");
+            }else{
+                $("ul").css("display","none");
+            }
+        }
     </script>
 </body>
 </html>
