--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
         </script>                
     </head>
     <script type="text/javascript">  
-        var num = 5;  
+        var num = 10;  
         function redirect() {  
             num--;  
             document.getElementById("num").innerHTML=num;  
@@ -40,32 +40,23 @@
         body{
             text-align: center
             }
+        img{
+            height: 320px;
+            width: auto;
+        }
     </style>
     <body>  
-        <br><br><br>
-                        <h2>404. Not Found</h2>  
-                        <p>  
-                            没有找到你要的页面  
-                        </p>  
-                        <p>  
-                            <span id="num">5</span>秒后自动跳转到首页<a href="/">马上跳转</a>  
-                        </p>  
-        
-        <pre>       
-                  .----.  
-               _.'__    `.  
-           .--($)($$)---/#\  
-         .' @          /###\  
-         :         ,   #####  
-          `-..__.-' _.-\###/  
-                `;_:    `"'  
-              .'"""""`.  
-             /,  ya ,\\  
-            //  404!  \\  
-            `-._______.-'  
-            ___`. | .'___  
-           (______|______)  
-        </pre>
-        
+        <br>
+        <img src="image/back1.PNG" />
+        <h2>404. Not Found</h2>  
+        <p>  
+            没有找到你要的页面  
+        </p>  
+        <p>  
+            <span id="num">10</span>秒后自动跳转到首页<a href="/">马上跳转</a>  
+        </p>  
+
+
+
     </body>  
 </html>
