--- a/404.html
+++ b/404.html
@@ -22,7 +22,8 @@
               var s = document.getElementsByTagName("script")[0]; 
               s.parentNode.insertBefore(hm, s);
             })();
-        </script>                
+        </script>
+        <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>             
     </head>
     <script type="text/javascript">  
         var num = 10;  
