--- a/404.html
+++ b/404.html
@@ -48,15 +48,22 @@
     </style>
     <body>  
         <br>
-        <img src="image/back1.PNG" />
+        <img src="i.holzora.top/image/back1.PNG" />
         <h2>404. Not Found</h2>  
         <p>  
             没有找到你要的页面  
         </p>  
         <p>  
+            <a href="#" onclick="go()">返回上一页</a>
+        </p>
+        <p>
             <span id="num">10</span>秒后自动跳转到首页<a href="/">马上跳转</a>  
         </p>  
-
+        <script>
+            function go(){
+                window.history.go(-1)
+            }
+        </script>
 
 
     </body>  
