--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
         <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>             
     </head>
     <script type="text/javascript">  
-        var num = 10;  
+        var num = 9;  
         function redirect() {  
             num--;  
             document.getElementById("num").innerHTML=num;  
@@ -46,6 +46,12 @@
             width: auto;
         }
     </style>
+    <style>
+        a{
+    text-decoration: none;
+    color: blue;
+    }
+    </style>
     <body>  
         <br>
         <img src="i.holzora.top/image/back1.PNG" />
@@ -57,7 +63,7 @@
             <a href="#" onclick="go()">返回上一页</a>
         </p>
         <p>
-            <span id="num">10</span>秒后自动跳转到首页<a href="/">马上跳转</a>  
+            <span id="num">9</span>秒后自动跳转到首页<a href="/">马上跳转</a>  
         </p>  
         <script>
             function go(){
