--- a/404.html
+++ b/404.html
@@ -54,7 +54,7 @@
     </style>
     <body>  
         <br>
-        <img src="i.holzora.top/image/back1.PNG" />
+        <img src="image/back1.png" />   
         <h2>404. Not Found</h2>  
         <p>  
             没有找到你要的页面  
