--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>星空音乐</title>
-    <link rel="stylesheet" href="../APlayer.min.css">
-    <link rel="stylesheet" href="../Xkset.css">
+    <link rel="stylesheet" href="css/APlayer.min.css">
+    <link rel="stylesheet" href="css/Xkset.css">
 </head>
 <body>
     <div id="main">
         <div id="aplayer"></div>
     </div>
 </body>
-<script src="../APlayer.min.js"></script>
-<script src="../Xkset.js"></script>
+<script src="js/APlayer.min.js"></script>
+<script src="js/Xkset.js"></script>
 </html>
