--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <title>星空音乐</title>
+    <link rel="shortcut icon" href="img/favicon.png"/>
     <link rel="stylesheet" href="css/APlayer.min.css">
     <link rel="stylesheet" href="css/Xkset.css">
+    <title>星空音乐</title>
 </head>
 <body>
     <div id="main">
