--- a/index.html
+++ b/index.html
@@ -13,8 +13,25 @@
     <title>星空音乐</title>
 </head>
 <body>
+    <div id=header>
+        <div id=title>
+            <ul class="left">
+                <li><i class="fa fa-home"></i><span>星空音乐</span></li>
+            </ul>
+        </div>
+        <div id=clock>
+            <ul class="right">
+                <li><i class="fa fa-clock-o"></i><span id=myclock></span></li>
+            </ul>
+        </div>
+    </div>
     <div id="main">
         <div id="aplayer"></div>
+    </div>
+    <div id=footer>
+        <div id=time>
+            <span id="runtime_span"></span>
+        </div>
     </div>
 </body>
 <script src="js/APlayer.min.js"></script>
