--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <div id=header>
         <div id=title>
             <ul class="left">
-                <li><i class="fa fa-home"></i><span>星空音乐</span></li>
+                <li><span>星空音乐</span></li>
             </ul>
         </div>
         <div id=clock>
             <ul class="right">
-                <li><i class="fa fa-clock-o"></i><span id=myclock></span></li>
+                <li><span id=myclock></span></li>
             </ul>
         </div>
     </div>
