--- a/index.html
+++ b/index.html
@@ -38,4 +38,5 @@
 </body>
 <script src="js/APlayer.min.js"></script>
 <script src="js/Xkset.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
 </html>
