--- a/js/index.html
+++ b/js/index.html
@@ -3,10 +3,10 @@
 <title>demo</title>
 </head>
 <body>
-<div id="dplayer"></div>
+<div id="dplayer1"></div>
 <script src="https://cdn.jsdelivr.net/npm/hls.js@0.14.9/dist/hls.min.js"></script> <script src="https://cdn.jsdelivr.net/npm/dplayer@1.26.0/dist/DPlayer.min.js"></script> <script>
   const dp = new DPlayer({
-  container: document.getElementById('dplayer'),
+  container: document.getElementById('dplayer1'),
 autoplay: true,
 preload: 'auto',
 airplay: true,
